--- a/style.css
+++ b/style.css
@@ -7,4 +7,40 @@ header{
     background-image: url(./imagens/banner.png);
     height: 500px;
     width: 100%;
+    display: flex; 
+    justify-content: space-between;
+
+
+}
+
+header h1 {
+    font-family: 'Pacifico', cursive;
+    color: rgb(255, 255, 255);
+    display: flex;
+    padding: 5px;
+}
+
+header h1 p { 
+    color: green;
+}
+
+header h2 {
+    color: white;
+    font-family: 'Muli', sans-serif;
+}
+
+.icones-header { 
+    display: flex;
+    justify-content: space-between;
+}
+
+.icones-header div {
+    background-color: rgba(0, 0, 0, 0.384);
+    border-radius: 50%; 
+    padding: 15px;
+
+}
+
+.tudo-menos-amao {
+  padding-left: 200px;
 }
